--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "cookies-next": "^2.1.1",
     "eslint": "8.41.0",
