--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookies-next": "^2.1.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "gif.js": "^0.2.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +28,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/gif.js": "^0.2.2",
     "@types/sockjs-client": "^1.5.1"
   }
 }
